<resources>
    <string name="app_name">MiniStuSystem</string>
    <string name="Stu_append">Append a new student</string>
    <string name="student_name">Name:</string>
    <string name="student_age">Age:</string>
    <string name="append_button">Append</string>
    <string name="edit_button">Edit</string>
    <string name="current">Current:</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="delete_button">Del</string>
    <string name="total_append">Total:</string>
    <string name="age">Age</string>
    <string name="cvs_completed">Curriculum Completed:</string>
    <string name="cvs_completed_header">Curriculum Completed:</string>
    <string name="student_details">Student Details</string>

    <string name="maths">Maths</string>
    <string name="english">English</string>
    <string name="computer">Computer</string>
    <string name="music">Music</string>
    <string name="painting">Painting</string>
    <string name="save_button">Save</string>


</resources>