<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_student_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/student_details"
        android:textColor="@color/design_default_color_primary_dark"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/student_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-27dp"
        android:layout_marginLeft="115dp"
        android:textColor="#FF0000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/current_student_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="223dp"
        android:layout_marginTop="-23dp"
        android:text="@string/student_age"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/student_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="-27dp"
        android:textColor="#FF0000"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/cvs_completed_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/cvs_completed_header"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/mathsC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:theme="@style/PinkCheck"/>

    <TextView
        android:id="@+id/maths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-39dp"
        android:text="@string/maths"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/englishC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:theme="@style/PinkCheck"/>

    <TextView
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-39dp"
        android:text="@string/english"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/computerC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:theme="@style/PinkCheck"/>

    <TextView
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-39dp"
        android:text="@string/computer"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/musicC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:theme="@style/PinkCheck"/>

    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-39dp"
        android:text="@string/music"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/paintingC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:theme="@style/PinkCheck"/>

    <TextView
        android:id="@+id/painting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-39dp"
        android:text="@string/painting"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginLeft="115dp"
        android:backgroundTint="@color/gray"
        android:text="@string/save_button"
        android:textColor="#000000" />





</LinearLayout>

